# imagewand

./: .gitignore  .pre-commit-config.yaml  DEV_TOOLS.md  GIT_HOOKS_GUIDE.md  LICENSE  Makefile  README.md  format_only.sh  main.py  pyproject.toml  setup.py  test_and_format.sh  test_commit.md
.github/workflows/: badge.yml  ci.yml
imagewand/: __init__.py  align.py  autocrop.py  autofix.py  automerge.py  cli.py  config.py  crop.py  filters.py  imageinfo.py  pdf2img.py  resize.py  rmbg.py  workflow.py
imagewand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
imagewand/plugins/: __init__.py  custom_filters.py
imagewand/scripts/: merge_command.py
tests/: test_align.py  test_autocrop.py  test_autofix.py  test_automerge.py  test_basic.py  test_cli.py  test_config.py  test_custom_filters.py  test_filters.py  test_imageinfo.py  test_pdf2img.py  test_resize.py  test_rmbg.py
