[project]
name = "imagewand"
version = "0.1.0"
description = "A Python package for image resizing and PDF to image conversion"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Pillow",
    "pdf2image",
    "requests>=2.31.0",
    "tqdm",
    "PyMuPDF",
    "opencv-python",
    "numpy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
imagewand = "imagewand.cli:main"
resize-images = "imagewand.resize:resize_image"
pdf-to-images = "imagewand.pdf2img:pdf_to_images"
imagewand-merge = "imagewand.scripts.merge_command:merge"

